Fixed center aligned image behavior

--- a/packages/block-library/src/image/editor.scss
+++ b/packages/block-library/src/image/editor.scss
@@ -74,4 +74,5 @@ figure.wp-block-image:not(.wp-block) {
 .wp-block[data-align="center"] > .wp-block-image {
 	margin-left: auto;
 	margin-right: auto;
+	text-align: center;
 }
